# BaroBot_rs

./: .gitignore  Cargo.toml
plugins/auto_shutup/: Cargo.toml
plugins/auto_shutup/src/: lib.rs
plugins/baro_main/: Cargo.toml
plugins/baro_main/src/: config.rs  lib.rs  modules.rs
plugins/baro_main/src/modules/: auto_shut_up.rs  mod.rs
plugins/baro_main/src/modules/auto_shut_up/: mod.rs
plugins/baro_main/src/modules/cmds/: mod.rs  ping.rs  random.rs
plugins/baro_main/src/modules/cmds/self_cmd/: mod.rs  time.rs
plugins/baro_main/src/modules/live/: mod.rs  room_info.rs
plugins/baro_main/src/modules/timetable/: mod.rs
plugins/brigadier/: Cargo.toml
plugins/brigadier/src/: lib.rs  register.rs
plugins/config/: Cargo.toml
plugins/config/src/: config.rs  lib.rs
plugins/limit_shutup/: Cargo.toml
plugins/limit_shutup/src/: lib.rs
plugins/live_reminder/: Cargo.toml
plugins/live_reminder/src/: lib.rs  room_info.rs
plugins/ping/: Cargo.toml
plugins/ping/src/: lib.rs
plugins/randomly_ai/: Cargo.toml
plugins/randomly_ai/src/: cc.rs  lib.rs
plugins/repeat/: Cargo.toml
plugins/repeat/src/: lib.rs
plugins/self_cmds/: Cargo.toml  build.rs
plugins/self_cmds/src/: cmds.rs  lib.rs
plugins/self_cmds/src/cmds/: info.rs  send.rs  time.rs
plugins/self_info/: Cargo.toml
plugins/self_info/src/: lib.rs
src/: main.rs
