[package]
name = "baro_main"
version = "0.1.0"
edition = "2024"

[dependencies]
azalea-brigadier = "0.13.0"
humantime = "2.2.0"
kovi.workspace = true
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
reqwest = { version = "0.12.23", features = ["cookies", "json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.219"
serde_yaml = "0.9.34"
